syntax = "proto3";

package transcription;

service Transcription {
    rpc TranscribeYoutube(YoutubeRequest) returns (stream TranscriptionResponse) {}
}

message YoutubeRequest {
  string url = 1;
}

message TranscriptionResponse {
  string message = 1;
}
